--- a/championship/templates/championship.html
+++ b/championship/templates/championship.html
@@ -4,12 +4,12 @@
 <!-- <div class="container-fluid p-4"> -->
 <div class="container-fluid p-4">
     <div class="row">
-        <div class="col-md">
-            <h2>Campeonatos</h2>
+        <div class="col-md d-flex align-items-center justify-content-center justify-content-md-start">
+            <h2 class="mb-2 text-center text-md-start">Campeonatos</h2>
         </div>
-        <div class="col-md">
-            <div class="d-flex justify-content-end">
-                <a href="{% url 'create_championship' %}" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="true">+ Crear Campeonato</a>
+        <div class="col-md mb-2">
+            <div class="d-flex justify-content-center justify-content-md-end">
+                <a href="{% url 'create_championship' %}" class="btn btn-outline-primary d-flex align-items-center" tabindex="-1" role="button" aria-disabled="true">+ Crear Campeonato</a>
 
             </div>
         </div>
