--- a/championship/templates/championship/admin/player_create_form.html
+++ b/championship/templates/championship/admin/player_create_form.html
@@ -46,7 +46,7 @@
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="telefono" class="form-label">Teléfono</label>
-                                    <input type="text" class="form-control" id="telefono">
+                                    <input type="text" class="form-control" id="telefono" name="telefono">
                                 </div>
                             </div>
                         </div>
