--- a/championship/templates/championship/navbar_championship.html
+++ b/championship/templates/championship/navbar_championship.html
@@ -6,7 +6,7 @@
         <a class="nav-link" href="{% url 'championship_view' championship.id %}">Resumen</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled" href="#">Clasificación</a>
+        <a class="nav-link" href="{% url 'matches_championship_view' championship.id %}">Partidos</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'championship_teams_view' championship.id %}">Equipos</a>
